; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_x509_trs.c_X509_TRUST_set.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_x509_trs.c_X509_TRUST_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X509_F_X509_TRUST_SET = common dso_local global i32 0, align 4
@X509_R_INVALID_TRUST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @X509_TRUST_set(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = call i32 @X509_TRUST_get_by_id(i32 %6)
  %8 = icmp eq i32 %7, -1
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i32, i32* @X509_F_X509_TRUST_SET, align 4
  %11 = load i32, i32* @X509_R_INVALID_TRUST, align 4
  %12 = call i32 @X509err(i32 %10, i32 %11)
  store i32 0, i32* %3, align 4
  br label %16

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = load i32*, i32** %4, align 8
  store i32 %14, i32* %15, align 4
  store i32 1, i32* %3, align 4
  br label %16

16:                                               ; preds = %13, %9
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @X509_TRUST_get_by_id(i32) #1

declare dso_local i32 @X509err(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
